# ColorMyConsole

./: CMakeLists.txt  LICENSE.txt  conanfile.py
include/colmc/: colmc.h  pop_warnings.h  push_warnings.h  raw_input.h  sequences.h  setup.h  term_size.h
src/colmc/: algorithms.h
src/colmc/posix/: setup.cpp
src/colmc/windows/: setup.cpp
tests/: CMakeLists.txt
tests/src/: colmc_test_algorithms.cpp  colmc_test_styles.cpp  test_clear_line.cpp  test_clear_screen.cpp  test_colors.cpp  test_cursor_movement.cpp  test_get_term_size.cpp  test_gotoxy.cpp  test_raw_input.cpp
